--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -33,6 +33,8 @@
             <div class="navbar-nav">
               <!-- Conditional for logged in users -->
               {% if current_user.is_authenticated %}
+
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
 
               {% else %}
