--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -1,36 +1,86 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="content-section">
+
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">{{ legend }}</legend>
+
+            <!-- Address -->
             <div class="form-group">
-                {{ form.title.label(class="form-control-label") }}
-                {% if form.title.errors %}
-                    {{ form.title(class="form-control form-control-lg is-invalid") }}
+                {{ form.addressNo.label(class="form-control-label") }}
+                {% if form.addressNo.errors %}
+                    {{ form.addressNo(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.title.errors %}
+                        {% for error in form.addressNo.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.title(class="form-control form-control-lg") }}
+                    {{ form.addressNo(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+
+            <!-- StreetName -->
             <div class="form-group">
-                {{ form.content.label(class="form-control-label") }}
-                {% if form.content.errors %}
-                    {{ form.content(class="form-control form-control-lg is-invalid") }}
+                {{ form.streetName.label(class="form-control-label") }}
+                {% if form.streetName.errors %}
+                    {{ form.streetName(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.content.errors %}
+                        {% for error in form.streetName.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.content(class="form-control form-control-lg") }}
+                    {{ form.streetName(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+
+            <!-- zipCode -->
+            <div class="form-group">
+                {{ form.zipCode.label(class="form-control-label") }}
+                {% if form.zipCode.errors %}
+                    {{ form.zipCode(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.zipCode.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.zipCode(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
+            <!-- apartmentNo -->
+            <div class="form-group">
+                {{ form.apartmentNo.label(class="form-control-label") }}
+                {% if form.apartmentNo.errors %}
+                    {{ form.apartmentNo(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.apartmentNo.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.apartmentNo(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <!-- State dropdown -->
+            <div class="form-group">
+                {{ form.state.label(class="form-control-label") }}
+                {% if form.state.errors %}
+                    {{ form.state(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.state.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.state(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
