update new file

--- a/flaskblog/templates/create_property.html
+++ b/flaskblog/templates/create_property.html
@@ -23,7 +23,7 @@
             </div>
 
             <!-- StreetName -->
-            <div class="form-group">
+            <div class="form-group"
                 {{ form.streetName.label(class="form-control-label") }}
                 {% if form.streetName.errors %}
                     {{ form.streetName(class="form-control form-control-lg is-invalid") }}
