--- a/flaskblog/templates/create_property.html
+++ b/flaskblog/templates/create_property.html
@@ -9,36 +9,21 @@
 
             <!-- Address -->
             <div class="form-group">
-                {{ form.addressNo.label(class="form-control-label") }}
-                {% if form.addressNo.errors %}
-                    {{ form.addressNo(class="form-control form-control-lg is-invalid") }}
+                {{ form.address.label(class="form-control-label") }}
+                {% if form.address.errors %}
+                    {{ form.address(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.addressNo.errors %}
+                        {% for error in form.address.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.addressNo(class="form-control form-control-lg") }}
+                    {{ form.address(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
 
-            <!-- StreetName -->
+            <!-- Zip Code -->
             <div class="form-group"
-                {{ form.streetName.label(class="form-control-label") }}
-                {% if form.streetName.errors %}
-                    {{ form.streetName(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.streetName.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.streetName(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-
-            <!-- zipCode -->
-            <div class="form-group">
                 {{ form.zipCode.label(class="form-control-label") }}
                 {% if form.zipCode.errors %}
                     {{ form.zipCode(class="form-control form-control-lg is-invalid") }}
@@ -64,20 +49,6 @@
                     </div>
                 {% else %}
                     {{ form.apartmentNo(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <!-- State dropdown -->
-            <div class="form-group">
-                {{ form.state.label(class="form-control-label") }}
-                {% if form.state.errors %}
-                    {{ form.state(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.state.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.state(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
 
